--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
 <h3>2018-Now, 21 Papers, 3 Challenge Reports</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr> 
+		<tr><td>One paper is accepted by IJCAI, 2022.</td></tr> 
 		<tr><td><i>One challenge report is accepted by CVPR Workshop, 2022.</i></td></tr> 	
+		<tr><td>Two papers are accepted by CVPR Workshop, 2022.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2022.</td></tr> 
+		<br>
 		<tr><td>One paper is accepted by AAAI, 2021.</td></tr> 
 		<tr><td>One paper is accepted by ICCV, 2021.</td></tr> 
 		<tr><td>One paper is accepted by ACMMM, 2021.</td></tr> 
@@ -88,14 +90,17 @@
 		<tr><td>One paper is accepted by PR, 2021.</td></tr> 
 		<tr><td>One paper is accepted by IEEE, TMM 2021.</td></tr> 
 		<tr><td>One paper is accepted by ICME, 2021.</td></tr> 	
+		<br>
 		<tr><td>One paper is accepted by IEEE, TCSVT 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TMM, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE Access, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TNNLS, 2020.</td></tr> 
 		<tr><td>One paper is accepted by IEEE TIP, 2020.</td></tr> 	
+		<br>
 		<tr><td>Two papers are accepted by ICCV Workshop, 2019.</td></tr> 
 		<tr><td><i>One challenge report is accepted by ICCV Workshop, 2019</i>.</td></tr> 
 		<tr><td>One paper is accepted by IET Image Processing, 2019.</td></tr> 	
+		<br>
 		<tr><td>One paper is accepted by ICONIP, 2018.</td></tr> 
 		<tr><td>One paper is accepted by ACCV, 2018.</td></tr> 
 		<tr><td>One paper is accepted by ECCV, 2018.</td></tr> 
@@ -157,8 +162,8 @@
 
 
 
-<h2>Selected Publications [Total Citations: 733] [Highest Citation: 394] <br>
-#: Co-first authors  *: Corresponding author</h2>
+<h2>Selected Publications [Total Citations: 734] [Highest Citation: 394] </h2>
+<h3>#：共同一作 *：通讯作者</h3>
 
 <h4>Preprint Papers</h4>
 <table id="tbPublications" width="100%">
@@ -168,10 +173,24 @@
 		<img src="./indexpics/SISR.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://arxiv.org/pdf/2109.14335.pdf" target="_blank">From Beginner to Master: A Survey for Deep Learning-based Single-Image Super-Resolution</a><br>
-		<b>Juncheng Li</b>, Zehua Pei, and Tieyong Zeng*.
+		<b>Juncheng Li#</b>, Zehua Pei#, and Tieyong Zeng*.
 		<p><em>arXiv 2109.14335</em>, 2021.<br>
 		<a href="paper/SISR_2021.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[Homepage]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution</a><br>
+			Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
+		<p><em>arXiv 2204.08696</em>, 2022.<br>
 		</td>
 	</tr>
 	<tr></tr>
@@ -204,7 +223,7 @@
 		<td width="206">
 		<img src="./indexpics/SeaNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution</a><br>
+		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng*.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">First contributor, Author names alphabetically.</font><br> 
@@ -245,7 +264,7 @@
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
 		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang*, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#Equal Contribution. SCI-1.</font><br> 
+		<font color="red">SCI-1.</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/LPNet-PyTorch", target="_blank">[Code]</a>
 		</td>
@@ -262,7 +281,7 @@
 		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
 		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang*, Aiwen Jiang, Guixu Zhang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#Equal Contribution. SCI-1.</font><br> 
+		<font color="red">SCI-1.</font><br> 
 		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[Paper]</a>
 		</td>
 	</tr>
@@ -275,10 +294,10 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation【New】</a><br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
-		<font color="red">*Corresponding author. SCI-1.</font><br>
+		<font color="red">SCI-1.</font><br>
 		<a href="paper/FBSNet.pdf", target="_blank">[Paper]</a>
 		</td>
 	</tr>
@@ -295,7 +314,7 @@
 		<td width="206">
 		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution 【Hot】</a><br>
+		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">Hot</font></a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
 		<font color="red">Top computer vision conference. 250 stars and 57 forks in Github.</font><br>
@@ -333,12 +352,11 @@
 		<td width="206">
 		<img src="./indexpics/MDRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation</a><br>
-		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Faming Fang, Guangwei Gao, Tieyong Zeng, and Guixu Zhang
+		<td> <a href="" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation <font color="red">【New】</font></a><br>
+		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Faming Fang, Guangwei Gao, Tieyong Zeng*, and Guixu Zhang
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
 		<a href="", target="_blank">[Paper]</a>
-        <a href="", target="_blank">[Poster]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -349,12 +367,12 @@
 		<td width="206">
 		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Transformer for Single Image Super-Resolution</a><br>
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【New】</font></a><br>
 		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
-		<a href="", target="_blank">[Paper]</a>
-        <a href="", target="_blank">[Poster]</a>
+		<a href="paper/ESRT.pdf", target="_blank">[Paper]</a>
+		<a href="paper/ESRT-supp.pdf", target="_blank">[Supp]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -366,14 +384,29 @@
 		<td width="206">
 		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution 【New】</a><br>
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
-		<font color="red">*Corresponding author.</font><br>
 		<font color="red">Top artificial intelligence conference.</font><br>
 		<a href="paper/AAAI.pdf", target="_blank">[Paper]</a>
 		<a href="poster/AAAI-poster.pdf", target="_blank">[Poster]</a>
-        <a href="", target="_blank">[Code]</a>
+        <a href="https://github.com/IVIPLab/FDIWN", target="_blank">[Code]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/IJCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
+		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
+		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI </b></i>), 2022. <br>
+		<font color="red">Top artificial intelligence conference.</font><br>
+		<a href="", target="_blank">[Paper]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -410,7 +443,7 @@
 		</td>		
 		<td><a href="paper/ACMMM_2021.pdf" target="_blank">Feedback Network for Mutually Boosted Stereo Image Super-Resolution and Disparity Estimation</a><br>
 		Qinyan Dai, <b>Juncheng Li</b>, Qiaosi Yi, Faming Fang*, and Guixu Zhang.
-		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACM MM</b></i>), 2021. <br>
+		<p><em>ACM International Conference on Multimedia</em> (<i><b>ACMMM</b></i>), 2021. <br>
 		<font color="red">Top multimedia conference.</font><br>
 		<a href="paper/ACMMM_2021.pdf", target="_blank">[Paper]</a>
 		<a href="poster/ACMMM_poster.pdf", target="_blank">[Poster]</a>
@@ -449,11 +482,12 @@
 		<td width="206">
 		<img src="./indexpics/NTIRE2022.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">NTIRE 2022 Challenge on Stereo Image Super-Resolution: Methods and Results</a><br>
+		<td> <a href="https://arxiv.org/pdf/2204.09197.pdf" target="_blank">NTIRE 2022 Challenge on Stereo Image Super-Resolution: Methods and Results <font color="red">【New】</font></a><br>
 		<p><em>CVPR NTIRE</em>, 2022.<br>
-		Longguang Wang, Yulan Guo, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
+		Longguang Wang, Yulan Guo*, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
 		<font color="red">Co-Organizer</font><br>
-		<a href="", target="_blank">[Paper]</a>
+		<a href="paper/NTIRE2022.pdf", target="_blank">[Paper]</a><br>
+		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">[Homepage]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -508,7 +542,7 @@
 			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge.</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">Robust Representation Learning for Multimedia Image Understanding</a>- Special session on ICME 2022.</td>
+			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">IEEE ICME 2021 Special Session "Advanced Representation Learning for Robust Multimedia Image Understanding".</a></td>
 		</tr>
 	</tbody>
 </table>
@@ -532,10 +566,25 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> IEEE TIP/ TMM/ TCSVT/ SPL</td>
+			<td> IEEE Transactions on Image Processing</td>
+		</tr>
+		<tr>
+			<td> IEEE Transactions on Multimedia</td>
+		</tr>
+		<tr>
+			<td> IEEE Transactions on Circuits and Systems for Video Technology</td>
+		</tr>
+		<tr>
+			<td> Information Science</td>
+		</tr>
+		<tr>
+			<td> Pattern Recognition</td>
 		</tr>
         <tr>
-			<td> INS/ PR/ KBS...</td>
+			<td> Knowledge-Based Systems </td>
+		</tr>
+		<tr>
+			<td> IEEE Signal Processing Letters </td>
 		</tr>
 		<tr>
 			<td> NTIRE/ ICME/ BMVC/ ICPR...</td>
@@ -550,10 +599,10 @@
 			<td> Member of CVF/CCF/CSIG/CAAI</td>
 		</tr>
 		<tr>
-			<td> Founder of CLF Studio 【A non-profit student innovation studio】</td>
+			<td> Founder of <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> </td>
 		</tr>
 		<tr>
-			<td> Founder of <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> </td>
+			<td> Founder of CLF Studio 【A non-profit student innovation studio】</td>
 		</tr>
 	</tbody>
 </table>
