--- a/index_zw.html
+++ b/index_zw.html
@@ -74,9 +74,11 @@
 <h3>2018-现在，21篇论文，3篇比赛报告</h3>
 <table style="border-spacing:2px">
 	<tbody>
-		<tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr> 
+		<tr><td>一篇论文已被 IJCAI, 2022.</td></tr> 
 		<tr><td><i>一篇比赛报告已被 CVPR Workshop接收, 2022.</i></td></tr> 	
+		<tr><td>两篇论文已被 CVPR Workshop接收, 2022.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2022.</td></tr> 
+		<br>
 		<tr><td>一篇论文已被 AAAI接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ICCV接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ACMMM接收, 2021.</td></tr> 
@@ -84,14 +86,17 @@
 		<tr><td>一篇论文已被 PR接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2021.</td></tr> 
 		<tr><td>一篇论文已被 ICME接收 2021.</td></tr> 	
+		<br>
 		<tr><td>一篇论文已被 IEEE TCSVT接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TMM接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE Access接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TNNLS接收, 2020.</td></tr> 
 		<tr><td>一篇论文已被 IEEE TIP接收, 2020.</td></tr> 	
+		<br>
 		<tr><td>两篇论文已被 ICCV Workshop接收, 2019.</td></tr> 
 		<tr><td><i>一篇比赛报告已被 ICCV Workshop接收, 2019.</i></td></tr> 
 		<tr><td>一篇论文已被 IET Image Processing接收, 2019.</td></tr> 	
+		<br>
 		<tr><td>一篇论文已被 ICONIP接收, 2018.</td></tr> 
 		<tr><td>一篇论文已被 ACCV接收, 2018.</td></tr> 
 		<tr><td>一篇论文已被 ECCV接收, 2018.</td></tr> 
@@ -153,8 +158,8 @@
 
 
 
-<h2>精选出版物 [总引用: 733] [最高引用: 394] <br>
-#：共同一作 *：通讯作者</h2>
+<h2>精选出版物 [总引用: 734] [最高引用: 394] </h2>
+<h3>#：共同一作 *：通讯作者</h3>
 
 <h4>预印本</h4>
 <table id="tbPublications" width="100%">
@@ -168,6 +173,20 @@
 		<p><em>arXiv 2109.14335</em>, 2021.<br>
 		<a href="paper/SISR_2021.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/CV-JunchengLi/SISR-Survey", target="_blank">[项目主页]</a>
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+	<tr></tr>
+
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/CTCNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td> <a href="https://arxiv.org/pdf/2204.08696.pdf" target="_blank">CTCNet: A CNN-Transformer Cooperation Network for Face Image Super-Resolution</a><br>
+			Guangwei Gao#, Zixiang Xu#, <b>Juncheng Li*</b>, Jian Yang, Tieyong Zeng, and Guo-Jun Qi.
+		<p><em>arXiv 2204.08696</em>, 2022.<br>
 		</td>
 	</tr>
 	<tr></tr>
@@ -200,7 +219,7 @@
 		<td width="206">
 		<img src="./indexpics/SeaNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution</a><br>
+		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		Faming Fang, <b>Juncheng Li</b>, and Tieyong Zeng*.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">第一贡献人, 作者按字母序排列。</font><br> 
@@ -241,7 +260,7 @@
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
 		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang*, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#共同一作。SCI-1区。</font><br> 
+		<font color="red">SCI-1区。</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[论文]</a>
 		<a href="https://github.com/MIVRC/LPNet-PyTorch", target="_blank">[代码]</a>
 		</td>
@@ -258,7 +277,7 @@
 		<td> <a href="https://ieeexplore.ieee.org/document/9473023" target="_blank">Efficient and Accurate Multi-scale Topological Network for Single Image Dehazing</a><br>
 		Qiaosi Yi#, <b>Juncheng Li#</b>, Faming Fang*, Aiwen Jiang, Guixu Zhang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
-		<font color="red">#共同一作。SCI-1区。</font><br> 
+		<font color="red">SCI-1区。</font><br> 
 		<a href="https://ieeexplore.ieee.org/document/9473023", target="_blank">[论文]</a>
 		</td>
 	</tr>
@@ -270,10 +289,10 @@
 		<td width="206">
 		<img src="./indexpics/FBSNet.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation【New】</a><br>
+		<td> <a href="https://ieeexplore.ieee.org/abstract/document/9732215" target="_blank">FBSNet: A Fast Bilateral Symmetrical Network for Real-Time Semantic Segmentation <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Guoan Xu#, <b>Juncheng Li*</b>, Yi Yu*, Huimin Lu, and Jian Yang
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2022. <br>
-		<font color="red">*通讯作者。 SCI-1区。</font><br>
+		<font color="red">SCI-1区。</font><br>
 		<a href="paper/FBSNet.pdf", target="_blank">[论文]</a>
 		</td>
 	</tr>
@@ -288,7 +307,7 @@
 		<td width="206">
 		<img src="./indexpics/MSRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution 【热门】</a><br>
+		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution <font color="red">【Hot】</font></a><br>
 		<b>Juncheng Li</b>, Faming Fang*, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
 		<font color="red">计算机视觉顶级会议。在GitHub上有250颗Star，57个Fork。</font><br>
@@ -326,12 +345,11 @@
 		<td width="206">
 		<img src="./indexpics/MDRN.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation</a><br>
-		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Faming Fang, Guangwei Gao, Tieyong Zeng, and Guixu Zhang
+		<td> <a href="" target="_blank">Multiple Degradation and Reconstruction Network for Single Image Denoising via Knowledge Distillation <font color="red">【New】</font></a><br>
+		<b>Juncheng Li</b>, Hanhui Yang, Qiaosi Yi, Faming Fang, Guangwei Gao, Tieyong Zeng*, and Guixu Zhang
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
 		<a href="", target="_blank">[论文]</a>
-        <a href="", target="_blank">[海报]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -342,12 +360,12 @@
 		<td width="206">
 		<img src="./indexpics/ESRT.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">Transformer for Single Image Super-Resolution</a><br>
+		<td> <a href="https://arxiv.org/pdf/2108.11084.pdf" target="_blank">Transformer for Single Image Super-Resolution <font color="red">【New】</font></a><br>
 		Zhisheng Lu#, <b>Juncheng Li#</b>, Hong Liu*, Chaoyan Huang, Linlin Zhang, and Tieyong Zeng
 		<p><em>The Conference on Computer Vision and Pattern Recognition Workshop</em> (<i><b>CVPR Workshop</b></i>), 2022. <br>
 		<font color="red">NTIRE</font><br>
-		<a href="", target="_blank">[论文]</a>
-        <a href="", target="_blank">[海报]</a>
+		<a href="paper/ESRT.pdf", target="_blank">[论文]</a>
+		<a href="paper/ESRT-supp.pdf", target="_blank">[补充材料]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -358,10 +376,9 @@
 		<td width="206">
 		<img src="./indexpics/AAAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution 【最新】</a><br>
+		<td><a href="" target="_blank">Feature Distillation Interaction Weighting Network for Lightweight Image Super-Resolution <font color="red">【New】</font></a><br>
 		Guangwei Gao#, Wenjie Li#, <b>Juncheng Li*</b>, Fei Wu, Huimin Lu, and Yi Yu
 		<p><em>Association for the Advancement of Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2022. <br>
-		<font color="red">*通讯作者.</font><br>
 		<font color="red">人工智能顶会.</font><br>
 		<a href="paper/AAAI.pdf", target="_blank">[论文]</a>
 		<a href="poster/AAAI-poster.pdf", target="_blank">[海报]</a>
@@ -371,6 +388,18 @@
 	<tr></tr>
     <tr></tr>
 	<tr></tr>
+
+	<tr>	
+		<td width="206">
+		<img src="./indexpics/IJCAI.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><a href="" target="_blank">Lightweight Bimodal Network for Single-Image Super-Resolution via Symmetric CNN and Recursive Transformer <font color="red">【New】</font></a><br>
+		Guangwei Gao#, Zhengxue Wang#, <b>Juncheng Li*</b>, Wenjie Li, Yi Yu, and Tieyong Zeng
+		<p><em>International Joint Conference on Artificial Intelligence</em> (<i><b>IJCAI </b></i>), 2022. <br>
+		<font color="red">人工智能顶会.</font><br>
+		<a href="", target="_blank">[论文]</a>
+		</td>
+	</tr>
 </tbody></table>
 
 
@@ -438,11 +467,12 @@
 		<td width="206">
 		<img src="./indexpics/NTIRE2022.png" width="200" height = "120" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank">NTIRE 2022 Challenge on Stereo Image Super-Resolution: Methods and Results</a><br>
+		<td> <a href="https://arxiv.org/pdf/2204.09197.pdf" target="_blank">NTIRE 2022 Challenge on Stereo Image Super-Resolution: Methods and Results <font color="red">【New】</font></a><br>
 		<p><em>CVPR NTIRE</em>, 2022.<br>
-		Longguang Wang, Yulan Guo, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
+		Longguang Wang, Yulan Guo*, Yingqian Wang, <b>Juncheng Li</b>, Shuhang Gu, Radu Timofte <br>
 		<font color="red">组织者</font><br>
-		<a href="", target="_blank">[论文]</a>
+		<a href="paper/NTIRE2022.pdf", target="_blank">[论文]</a><br>
+		<a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">[主页]</a>
 		</td>
 	</tr>
 	<tr></tr>
@@ -496,7 +526,7 @@
 			<td> <a href="https://github.com/The-Learning-And-Vision-Atelier-LAVA/Stereo-Image-SR/tree/NTIRE2022", target="_blank">NTIRE 2022: Stereo Image Super-Resolution Challenge.</a></td>
 		</tr>
 		<tr>
-			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">Robust Representation Learning for Multimedia Image Understanding</a>- Special session on ICME 2022.</td>
+			<td> <a href="https://guangweigao.github.io/icme22ss.html", target="_blank">IEEE ICME 2021 Special Session "Advanced Representation Learning for Robust Multimedia Image Understanding".</a></td>
 		</tr>
 	</tbody>
 </table>
@@ -520,10 +550,25 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> IEEE TIP/ TMM/ TCSVT/ SPL</td>
+			<td> IEEE Transactions on Image Processing</td>
+		</tr>
+		<tr>
+			<td> IEEE Transactions on Multimedia</td>
+		</tr>
+		<tr>
+			<td> IEEE Transactions on Circuits and Systems for Video Technology</td>
+		</tr>
+		<tr>
+			<td> Information Science</td>
+		</tr>
+		<tr>
+			<td> Pattern Recognition</td>
 		</tr>
         <tr>
-			<td> INS/ PR/ KBS...</td>
+			<td> Knowledge-Based Systems </td>
+		</tr>
+		<tr>
+			<td> IEEE Signal Processing Letters </td>
 		</tr>
 		<tr>
 			<td> NTIRE/ ICME/ BMVC/ ICPR...</td>
@@ -538,10 +583,10 @@
 			<td> CVF/CCF/CSIG/CAAI会员</td>
 		</tr>
 		<tr>
-			<td> 丛林蜂工作室（CLF Studio）创始人【非营利学生创新工作室】</td>
+			<td> <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 发起人</td>
 		</tr>
 		<tr>
-			<td> <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 发起人</td>
+			<td> 丛林蜂工作室（CLF Studio）创始人【非营利学生创新工作室】</td>
 		</tr>
 	</tbody>
 </table>
